--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Assignment1"
         tools:targetApi="31">
         <activity
+            android:name=".Assign_04_E"
+            android:exported="false" />
+        <activity
+            android:name=".Assign_04_C"
+            android:exported="false" />
+        <activity
+            android:name=".Assign_04"
+            android:exported="false" />
+        <activity
             android:name=".Assign_02"
             android:exported="false" />
         <activity
