--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Assignment1"
         tools:targetApi="31">
         <activity
+            android:name=".Assign_05"
+            android:exported="false" />
+        <activity
             android:name=".Assign_04_E"
             android:exported="false" />
         <activity
